removed Sonar majors